Implemented API getSearchHistory, getGraphData and getProductList API , added validation forsearches
