# src/swagger-output.json
@@ -120,6 +120,19 @@
         }
       }
     },
+    "/storeSynonymData": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/getSpecificRawById": {
       "post": {
         "description": "",
